--- a/Lang/zh_TW.lang
+++ b/Lang/zh_TW.lang
@@ -4,26 +4,6 @@ Traditional_Chinese
 否
 開啟
 關閉
-空氣
-石頭
-草方塊
-泥土
-碎石
-木材
-原木
-基岩
-樹葉
-玻璃
-水
-岩漿
-螢光石
-沙
-水泥
-冰
-煤炭磚
-鐵磚
-TNT
-Null方塊
 開始遊戲
 >>選項…
 退出
@@ -34,7 +14,6 @@ Null方塊
 >> 進階顯示設定 ...
 >> 用戶圖形界面設定 ...
 >> Select language...
->> 音效選項 ...
 << 返回主菜單
 保存設定
 ===============< 顯 示 設 定 >=================
@@ -48,7 +27,7 @@ Null方塊
 ===============< 進階渲染選項 >================
 啟用進階渲染：
 ShadowMap大小：
-最大距離：
+最高距離：
 << 返回顯示設定
 =============< 用戶圖形界面設定 >==============
 強制使用Unicode字符：
@@ -69,6 +48,3 @@ PPI stretch (實驗性)
 << 返回選擇世界菜單
 ================< 選 擇 語 言 >================
 << 返回選項菜單
-================< 音 效 設 置 >================
-背景音樂音量
-音效音量
