--- a/Lang/en_US.lang
+++ b/Lang/en_US.lang
@@ -4,50 +4,29 @@ Yes
 No
 Enabled
 Disabled
-Air
-Rock
-Grass
-Dirt
-Stone
-Plank
-Wood
-Bedrock
-Leaves
-Glass
-Water
-Lava
-Glowstone
-Sand
-Cement
-Ice
-Coal Block
-Iron Block
-TNT
-Null Block
 Start game
->> Options
+>> Options...
 Exit
 =================< Options >==================
 Field of view: 
 Mouse sensitivity: 
 Render distance: 
->> Render options
->> GUI options
->> Select language
->> Sound options
+>> Render options...
+>> GUI options...
+>> Select language...
 << Back to main menu
 Save options
 =============< Render options >===============
 Smooth lighting: 
 Connect grass texture: 
 Merge face rendering: 
-MSAA: 
->> Advanced rendering 
+Multi-sample AA: 
+>> Advanced rendering ...
 Vertical sync: 
 << Back to options menu
 ============< Advanced rendering >============
 Enabled: 
-ShadowMap resolution: 
+Shadow map resolution: 
 Max shadow distance:
 << Back to render options
 ===============< GUI options >================
@@ -58,17 +37,14 @@ PPI stretch (EXPERIMENTAL)
 ==============< Select world >================
 Enter this world
 Delete this world
->> Create a new world 
+>> Create a new world ...
 << Back to main menu
 ================< Game menu >=================
-Resume game
+Continue game
 << Back to main menu
 ==============< Create a world >==============
-World name
+Input world name
 OK
 << Back to world menu
 ================< Languages >=================
 << Back to options menu
-==================< Sound >===================
-MusicGain
-SoundGain
