--- a/Lang/zh_CN.lang
+++ b/Lang/zh_CN.lang
@@ -4,26 +4,6 @@ Chinese_Simplified
 否
 开启
 关闭
-空气
-岩石
-草
-泥土
-石头
-木板
-原木
-基岩
-树叶
-玻璃块
-水
-岩浆
-萤石
-沙子
-水泥
-冰
-煤块
-铁块
-TNT
-Null Block
 开始游戏
 >> 选项 ...
 退出
@@ -34,7 +14,6 @@ Null Block
 >> 渲染选项 ...
 >> 图形界面选项 ...
 >> Select language...
->> 音效选项 ...
 << 返回主菜单
 保存设置
 ===============< 渲 染 选 项 >================
@@ -53,7 +32,7 @@ ShadowMap大小：
 ===============< 图形界面选项 >===============
 全部使用Unicode字体：
 背景模糊：
-PPI stretch (实验性)
+PPI stretch (EXPERIMENTAL)
 << 返回选项菜单
 ===============< 选 择 世 界 >================
 进入选定的世界
@@ -69,6 +48,3 @@ PPI stretch (实验性)
 << 返回世界菜单
 ===============< 语 言 设 置 >================
 << 返回选项菜单
-===============< 音 效 设 置 >================
-背景音乐音量
-音效音量
